--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,3 +208,13 @@ footer > .right {
 .footer-link {
     padding: 12px 0 12px 30px;
 }
+
+/* Search Page */
+
+/* Nav */
+
+.gear-img {
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+}
