--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,8 +244,156 @@ footer > .right {
 
 /* Nav */
 
+.search-header {
+    border-bottom: 1px solid #E6E8EB;
+}
+
+.search-nav {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.search-nav > a > img {
+    width: 120px;
+    margin-top: 12px;
+}
+
+.search-searchbar {
+    margin-top: 10px;
+    margin-left: 17px;
+    box-shadow: 0 1px 6px 0 rgb(32 33 36 / 28%);
+    border-color: white;
+}
+
+.search-text {
+    vertical-align: sub;
+    margin-left: 10px;
+}
+
+.search-icons {
+    margin-left: auto;
+    margin-top: 10px;
+}
+
+.vertical-border {
+    border-left: 1px solid #dfe1e5;
+    height: 65%;
+}
+
 .gear-img {
     width: 20px;
     height: 20px;
     background-color: transparent;
 }
+
+.search-second-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 11px;
+    margin-left: 150px;
+    width: 575px;;
+}
+
+.search-second-nav a {
+    font-family: Google Sans, arial, sans-serif;
+    color: #777;
+    font-size: 14px;
+    text-decoration: none;
+    padding: 10px 15px;
+    line-height: 19px;
+    border: 1px solid transparent;
+    border-radius: 2px;
+}
+
+.search-second-nav .selected {
+    border-bottom: 3px solid #1A73E8;
+    color: #1A73E8;
+}
+
+.search-second-nav div {
+    display: flex;
+}
+
+/* Search Results */
+
+.search-results {
+    margin-left: 150px;
+    width: 632px;
+}
+
+.starts {
+    font: 13px Google Sans, Arial, sans-serif;
+    color: #777;
+    padding: 12px 0;
+}
+
+.search-result-text {
+    margin-top: 12px;
+}
+
+.search-result-text .search-url {
+    font-family: arial, sans-serif;
+    font-size: 14px;
+    color: #202124;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+
+.search-result-text h3 {
+    font-family: arial, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    color: #1a0dab;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-top: 5px;
+}
+
+.search-result-text p {
+    font-family: arial, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #4d5156;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    line-height: 22.12px;
+}
+
+.search-result-text div {
+    color: #1a0dab;
+}
+
+.search-result-text a {
+    font-family: arial, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #1a0dab;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    text-decoration: none;
+}
+
+.search-result-text a:hover {
+    text-decoration: underline;
+}
+
+.margin-top-result {
+    margin-top: 30px;
+}
+
+.search-result-text .nounderline:hover {
+    text-decoration: none;
+}
+
+.search-result-text .underlineonhover:hover {
+    text-decoration: underline;
+}
+
+
+
+
+
